<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name">Fyreplace</string>
    <string name="app_code_url" translatable="false">https://github.com/fyreplace</string>
    <string name="app_bug_report_url" translatable="false">mailto:bugs@fyreplace.app</string>
    <string name="legal_privacy_policy">Privacy policy</string>
    <string name="legal_privacy_policy_url" translatable="false">https://fyreplace.net/privacy-policy</string>
    <string name="legal_terms_of_service">Terms of service</string>
    <string name="legal_terms_of_service_url" translatable="false">https://fyreplace.net/terms-of-service</string>
    <string name="profile_deleted"><i>User deleted</i></string>
    <string name="profile_banned"><i>User banned</i></string>
    <string name="profile_anonymous"><i>Anonymous</i></string>
    <string name="profile_avatar">Avatar</string>
    <string name="comment_deleted"><i>Comment deleted</i></string>
    <string name="notification_channel_group_comments_id">comments</string>
    <string name="notification_channel_group_comments_name">Comments</string>
    <string name="notification_channel_comments_own_posts_id">comments_own_posts</string>
    <string name="notification_channel_comments_own_posts_name">Comments on your posts</string>
    <string name="notification_channel_comments_other_posts_id">comments_other_posts</string>
    <string name="notification_channel_comments_other_posts_name">Comments on subscribed posts</string>
    <string name="notification_channel_default_id">@string/notification_channel_comments_other_posts_id</string>
    <string name="error_title">Unknown error: %1$s</string>
    <string name="error_unavailable_title">Service unavailable</string>
    <string name="error_unavailable_message">The Fyreplace server is currently unavailable. It is likely undergoing some maintenance, come back later!</string>
    <string name="error_authentication_title">Authentication error</string>
    <string name="error_authentication_message">You are not authenticated.</string>
    <string name="error_permission_title">Permission error</string>
    <string name="error_permission_message">You do not have the permission to perform this action.</string>
    <string name="error_validation_title">Validation error</string>
    <string name="error_validation_message">The data received is not correct.</string>
    <string name="error_autodisconnect_title">You have been disconnected</string>
    <string name="error_autodisconnect_message">Your session has expired.</string>
    <string name="destination_feed">Feed</string>
    <string name="destination_notifications">Notifications</string>
    <string name="destination_archive">Archive</string>
    <string name="destination_drafts">Drafts</string>
    <string name="destination_settings">Settings</string>
    <string name="destination_blocked_users">Blocked users</string>
    <string name="image_selector_action_file">Pick a file</string>
    <string name="image_selector_action_photo">Take a picture</string>
    <string name="image_selector_action_remove">Remove</string>
    <string name="image_selector_snackbar_upload">Uploading…</string>
    <string name="image_error_unknown_type_message">Unknown file type</string>
    <string name="image_error_file_size_title">Invalid image</string>
    <string name="image_error_file_size_message">This picture is too large.</string>
    <string name="text_input_menu_action_done">Done</string>
    <string name="text_input_length">%1$d/%2$d characters</string>
    <string name="main_account_activated_title">Account activated</string>
    <string name="main_account_activated_message">Your account has been successfully activated. Welcome to Fyreplace!</string>
    <string name="main_user_email_changed_message">Email updated</string>
    <string name="main_error_malformed_url_title">Cannot open URL</string>
    <string name="main_error_malformed_url_message">This URL is invalid.</string>
    <string name="main_error_timestamp_exceeded_title">Outdated URL</string>
    <string name="main_error_timestamp_exceeded_message">This URL has expired.</string>
    <string name="main_error_invalid_token_title">Invalid token</string>
    <string name="main_error_invalid_token_message">The token in the URL is not correctly formed.</string>
    <string name="main_error_invalid_connection_token_title">Invalid connection token</string>
    <string name="main_error_invalid_connection_token_message">This URL has likely already been used.</string>
    <string name="main_error_user_not_pending_title">Account already activated</string>
    <string name="main_error_user_not_pending_message">This account has already been activated.</string>
    <string name="feed_menu_action_help">How does it work?</string>
    <string name="feed_help_title">How it works</string>
    <string name="feed_help_message">The buttons on the right allow you to spread or dismiss posts in your feed.\nSpreading will send posts to other people, dismissing will simply remove it from your feed.\n\nIf you\'re interested, head over to the settings to make an account!</string>
    <string name="feed_empty">Nothing more to see for now</string>
    <string name="notifications_menu_action_clear">Clear</string>
    <string name="notifications_clear_title">Clear all notifications?</string>
    <string name="notifications_empty">No notifications</string>
    <string-array name="notifications_item_choices">
        <item>Dismiss</item>
    </string-array>
    <string name="archive_page_all">All posts</string>
    <string name="archive_page_own">My posts</string>
    <string name="archive_all_empty">No subscribed posts</string>
    <string name="archive_own_empty">No published posts</string>
    <string name="drafts_empty">No drafts</string>
    <string name="drafts_item_empty">Empty</string>
    <plurals name="drafts_item_parts">
        <item quantity="zero">No parts</item>
        <item quantity="one">%1$d part</item>
        <item quantity="other">%1$d parts</item>
    </plurals>
    <string-array name="drafts_item_choices">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="settings_profile">Profile</string>
    <string name="settings_username">Guest</string>
    <string name="settings_date_joined">Joined on %1$s</string>
    <string name="settings_has_not_joined">Hasn\'t joined yet</string>
    <string name="settings_email">Email</string>
    <string name="settings_email_desc">email@example.org</string>
    <string name="settings_email_change_message">What\'s your new email address?</string>
    <string name="settings_email_change_success_title">Email change requested</string>
    <string name="settings_email_change_success_message">A confirmation email has been sent to your new address.</string>
    <string name="settings_bio">Bio</string>
    <string name="settings_bio_desc">Empty</string>
    <string name="settings_blocked_users">@string/destination_blocked_users</string>
    <plurals name="settings_blocked_users_desc">
        <item quantity="zero">No users blocked</item>
        <item quantity="one">%1$d user blocked</item>
        <item quantity="other">%1$d users blocked</item>
    </plurals>
    <string name="settings_interface">Interface</string>
    <string-array name="settings_theme">
        <item>@string/settings_theme_auto</item>
        <item>@string/settings_theme_light</item>
        <item>@string/settings_theme_dark</item>
    </string-array>
    <string name="settings_theme_auto">Follow battery saver</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_auto_value">auto</string>
    <string name="settings_theme_light_value">light</string>
    <string name="settings_theme_dark_value">dark</string>
    <string-array name="settings_theme_values">
        <item>@string/settings_theme_auto_value</item>
        <item>@string/settings_theme_light_value</item>
        <item>@string/settings_theme_dark_value</item>
    </string-array>
    <string name="settings_about">About</string>
    <string name="settings_privacy_policy_desc">See how your data is handled</string>
    <string name="settings_terms_of_service_desc">Check the rules of the app</string>
    <string name="settings_code">Source code</string>
    <string name="settings_code_desc">This app is open-source</string>
    <string name="settings_bug_report">Report a bug</string>
    <string name="settings_bug_report_desc">Send an email</string>
    <string name="settings_account">Account</string>
    <string name="settings_register">Register</string>
    <string name="settings_register_desc">Create a new account</string>
    <string name="settings_login">Login</string>
    <string name="settings_login_desc">Log into an existing account</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_desc">Disconnect from your account</string>
    <string name="settings_delete">Delete account</string>
    <string name="settings_delete_desc">Permanently delete your account</string>
    <string name="settings_delete_countdown">Delete account (%1$d)</string>
    <string name="settings_account_deletion_title">Account deletion</string>
    <string name="settings_account_deletion_message">Deleting your account is a permanent action. You will not be able to restore your account afterwards, and all your posts and comments will also be deleted.\n\nAre you sure you want to go through with this?</string>
    <string name="settings_account_deletion_success_title">Account deleted</string>
    <string name="settings_account_deletion_success_message">Your account has been deleted, your posts and comments will be fully removed as well within the next minutes.\n\nGoodbye! 👋</string>
    <string name="settings_environment">Environment</string>
    <string name="settings_environment_main">Production</string>
    <string name="settings_environment_dev">Sandbox</string>
    <string name="settings_environment_local">Local</string>
    <string name="settings_environment_main_value">main</string>
    <string name="settings_environment_dev_value">dev</string>
    <string name="settings_environment_local_value">local</string>
    <string name="settings_error_bio_too_long_title">Invalid bio</string>
    <string name="settings_error_bio_too_long_message">Your bio is too long.</string>
    <string name="post_menu_action_share">Share</string>
    <string name="post_menu_action_subscribe">Subscribe</string>
    <string name="post_menu_action_unsubscribe">Unsubscribe</string>
    <string name="post_menu_action_report">Report</string>
    <string name="post_menu_action_delete">Delete</string>
    <string name="post_primary_action_comment">Comment</string>
    <string name="post_report_title">Report this post?</string>
    <string name="post_report_success_message">Post reported</string>
    <string name="post_delete_title">Delete this post?</string>
    <string name="post_delete_message">This action cannot be undone.</string>
    <string name="post_comment_menu_action_share">Share</string>
    <string name="post_comment_menu_action_report">Report</string>
    <string name="post_comment_menu_action_delete">Delete</string>
    <string name="post_comment_report_title">Report comment?</string>
    <string name="post_comment_report_success_message">Comment reported</string>
    <string name="post_comment_delete_title">Delete this comment?</string>
    <string name="post_comment_delete_message">This action cannot be undone.</string>
    <string name="post_write_comment">Add comment</string>
    <string name="post_snackbar_comment_created">New comment from %1$s</string>
    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_logo_desc">Logo</string>
</resources>