<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_profile">
        <app.fyreplace.fyreplace.ui.preferences.ImagePreference
            app:icon="@drawable/ic_baseline_face"
            app:key="avatar"
            app:summary="@string/settings_has_not_joined"
            app:title="@string/settings_username" />
        <app.fyreplace.fyreplace.ui.preferences.EmailPreference
            app:dialogMessage="@string/settings_email_change_message"
            app:icon="@drawable/ic_baseline_alternate_email"
            app:isPreferenceVisible="false"
            app:key="email"
            app:summary="@string/settings_email_desc"
            app:title="@string/settings_email" />
        <Preference
            app:icon="@drawable/ic_baseline_person"
            app:isPreferenceVisible="false"
            app:key="bio"
            app:summary="@string/settings_bio_desc"
            app:title="@string/settings_bio" />
        <Preference
            app:icon="@drawable/ic_baseline_block"
            app:isPreferenceVisible="false"
            app:key="blocked_users"
            app:title="@string/settings_blocked_users" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_interface">
        <app.fyreplace.fyreplace.ui.preferences.ThemePreference
            app:icon="@drawable/ic_baseline_brightness_medium"
            app:key="theme"
            app:summary="@string/settings_theme_auto"
            app:title="@string/settings_theme" />
    </PreferenceCategory>
    <PreferenceCategory
        app:isPreferenceVisible="false"
        app:key="category_about"
        app:title="@string/settings_about">
        <Preference
            app:icon="@drawable/ic_baseline_shield"
            app:key="privacy_policy"
            app:summary="@string/settings_privacy_policy_desc"
            app:title="@string/legal_privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/legal_privacy_policy_url" />
        </Preference>
        <Preference
            app:icon="@drawable/ic_baseline_gavel"
            app:key="terms_of_service"
            app:summary="@string/settings_terms_of_service_desc"
            app:title="@string/legal_terms_of_service">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/legal_terms_of_service_url" />
        </Preference>
        <Preference
            app:icon="@drawable/ic_baseline_code"
            app:key="code"
            app:summary="@string/settings_code_desc"
            app:title="@string/settings_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_code_url" />
        </Preference>
        <Preference
            app:icon="@drawable/ic_baseline_bug_report"
            app:key="bug_report"
            app:summary="@string/settings_bug_report_desc"
            app:title="@string/settings_bug_report">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="@string/app_bug_report_url" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_account">
        <Preference
            app:icon="@drawable/ic_baseline_how_to_reg"
            app:isPreferenceVisible="false"
            app:key="register"
            app:summary="@string/settings_register_desc"
            app:title="@string/settings_register" />
        <Preference
            app:icon="@drawable/ic_baseline_login"
            app:isPreferenceVisible="false"
            app:key="login"
            app:summary="@string/settings_login_desc"
            app:title="@string/settings_login" />
        <Preference
            app:icon="@drawable/ic_baseline_logout"
            app:isPreferenceVisible="false"
            app:key="logout"
            app:summary="@string/settings_logout_desc"
            app:title="@string/settings_logout" />
        <Preference
            app:icon="@drawable/ic_baseline_delete"
            app:isPreferenceVisible="false"
            app:key="delete"
            app:summary="@string/settings_delete_desc"
            app:title="@string/settings_delete" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="category_environment"
        app:title="@string/settings_environment">
        <app.fyreplace.fyreplace.ui.preferences.EnvironmentPreference
            app:icon="@drawable/ic_baseline_fyreplace"
            app:key="environment"
            app:summary="@string/settings_environment_main"
            app:title="@string/settings_environment" />
    </PreferenceCategory>
</PreferenceScreen>
