<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_profile">
        <app.fyreplace.fyreplace.views.ImagePreference
            app:icon="@drawable/ic_baseline_face"
            app:key="avatar"
            app:summary="@string/settings_has_not_joined"
            app:title="@string/settings_username" />
        <EditTextPreference
            app:dialogMessage="@string/settings_email_change_message"
            app:icon="@drawable/ic_baseline_alternate_email"
            app:isPreferenceVisible="false"
            app:key="email"
            app:summary="@string/settings_email_desc"
            app:title="@string/settings_email" />
        <app.fyreplace.fyreplace.views.TextBlockPreference
            app:icon="@drawable/ic_baseline_person"
            app:isPreferenceVisible="false"
            app:key="bio"
            app:summary="@string/settings_bio_desc"
            app:title="@string/settings_bio" />
        <Preference
            app:icon="@drawable/ic_baseline_block"
            app:isPreferenceVisible="false"
            app:key="blocked_users"
            app:title="@string/settings_blocked_users" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_interface">
        <ListPreference
            app:entries="@array/settings_theme"
            app:entryValues="@array/settings_theme_values"
            app:icon="@drawable/ic_baseline_brightness_medium"
            app:key="theme"
            app:summary="@string/settings_theme_auto"
            app:title="@string/settings_theme" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_account">
        <Preference
            app:icon="@drawable/ic_baseline_how_to_reg"
            app:isPreferenceVisible="false"
            app:key="register"
            app:summary="@string/settings_register_desc"
            app:title="@string/settings_register" />
        <Preference
            app:icon="@drawable/ic_baseline_login"
            app:isPreferenceVisible="false"
            app:key="login"
            app:summary="@string/settings_login_desc"
            app:title="@string/settings_login" />
        <Preference
            app:icon="@drawable/ic_baseline_logout"
            app:isPreferenceVisible="false"
            app:key="logout"
            app:summary="@string/settings_logout_desc"
            app:title="@string/settings_logout" />
        <Preference
            app:icon="@drawable/ic_baseline_delete"
            app:isPreferenceVisible="false"
            app:key="delete"
            app:summary="@string/settings_delete_desc"
            app:title="@string/settings_delete" />
    </PreferenceCategory>
</PreferenceScreen>
