<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/fragment_feed">
    <fragment
        android:id="@+id/fragment_feed"
        android:name="app.fyreplace.fyreplace.ui.fragments.FeedFragment"
        android:label="@string/destination_feed"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@+id/fragment_notifications"
        android:name="app.fyreplace.fyreplace.ui.fragments.NotificationsFragment"
        android:label="@string/destination_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/fragment_archive"
        android:name="app.fyreplace.fyreplace.ui.fragments.ArchiveFragment"
        android:label="@string/destination_archive"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/fragment_drafts"
        android:name="app.fyreplace.fyreplace.ui.fragments.DraftsFragment"
        android:label="@string/destination_drafts"
        tools:layout="@layout/fragment_drafts" />
    <fragment
        android:id="@+id/fragment_post"
        android:name="app.fyreplace.fyreplace.ui.fragments.PostFragment"
        tools:layout="@layout/fragment_post">
        <argument
            android:name="post"
            app:argType="app.fyreplace.protos.Post" />
        <argument
            android:name="position"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <dialog
        android:id="@+id/fragment_user"
        android:name="app.fyreplace.fyreplace.ui.fragments.UserFragment"
        android:label=""
        tools:layout="@layout/fragment_user">
        <argument
            android:name="profile"
            app:argType="app.fyreplace.protos.Profile" />
        <argument
            android:name="position"
            android:defaultValue="-1"
            app:argType="integer" />
    </dialog>
    <fragment
        android:id="@+id/fragment_settings"
        android:name="app.fyreplace.fyreplace.ui.fragments.SettingsFragment"
        android:label="@string/destination_settings">
        <action
            android:id="@+id/to_fragment_login"
            app:destination="@id/fragment_login" />
        <action
            android:id="@+id/action_blocked_users"
            app:destination="@id/fragment_blocked_users" />
    </fragment>
    <fragment
        android:id="@+id/fragment_login"
        android:name="app.fyreplace.fyreplace.ui.fragments.LoginFragment"
        android:label=""
        tools:layout="@layout/fragment_login">
        <argument
            android:name="isRegistering"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/fragment_blocked_users"
        android:name="app.fyreplace.fyreplace.ui.fragments.BlockedUsersFragment"
        android:label="@string/destination_blocked_users"
        tools:layout="@layout/fragment_item_list" />
    <action
        android:id="@+id/action_post"
        app:destination="@id/fragment_post" />
    <action
        android:id="@+id/action_user"
        app:destination="@id/fragment_user" />
</navigation>
