<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="app.fyreplace.fyreplace.viewmodels.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/gap"
            android:paddingTop="@dimen/gap_wide"
            android:paddingEnd="@dimen/gap"
            android:paddingBottom="@dimen/gap_wide">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap"
                android:layout_marginBottom="@dimen/gap"
                android:contentDescription="@string/login_logo_desc"
                android:src="@drawable/logo"
                app:tint="@color/seed" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/form_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap"
                android:hint="@string/login_email"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/email_max_size"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="@integer/email_max_size"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/form_width"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:visibility="@{vm.isRegistering ? View.VISIBLE : View.GONE}"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/username_max_size"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="@integer/username_max_size"
                    android:text="@={vm.username}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{vm.canProceed}"
                android:text="@{vm.isRegistering ? @string/settings_register : @string/settings_login}"
                android:visibility="@{vm.isLoading ? View.GONE : View.VISIBLE}" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap"
                android:orientation="horizontal"
                android:visibility="@{vm.isRegistering ? View.VISIBLE : View.GONE}">

                <Button
                    android:id="@+id/privacy_policy"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_privacy_policy" />

                <Button
                    android:id="@+id/terms_of_service"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_terms_of_service" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
